--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,16 +2,18 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.burst": "1.2.0-preview.11",
+    "com.unity.burst": "1.2.1",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.vscode": "1.1.3",
-    "com.unity.inputsystem": "1.0.0-preview.3",
+    "com.unity.dots.editor": "0.3.0-preview",
+    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.inputsystem": "1.0.0-preview.4",
+    "com.unity.jobs": "0.2.4-preview.11",
     "com.unity.physics": "0.2.5-preview.1",
-    "com.unity.render-pipelines.high-definition": "7.1.6",
-    "com.unity.rendering.hybrid": "0.3.1-preview.10",
-    "com.unity.test-framework.performance": "1.3.2-preview",
+    "com.unity.render-pipelines.high-definition": "7.1.8",
+    "com.unity.rendering.hybrid": "0.3.3-preview.11",
+    "com.unity.test-framework.performance": "1.3.3-preview",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.9",
+    "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "1.3.8",
     "com.unity.xr.management": "3.0.5",
